[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyqoi"
authors = [{name = "Edward Knight", email = "edw@rdknig.ht"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
python_requires = "~ 3.10"

[project.urls]
Home = "https://github.com/Edward-Knight/pyqoi"

[project.scripts]
pyqoi = "pyqoi:__main__"

[tool.black]
target_version = ["py310"]
